# AnonCam

./: .gitignore  AnonCamApp.swift  BUILD.md  CMakeLists.txt  Package.swift  QuickTest.swift  README.md  create_project.sh
AnonCam.xcodeproj/: project.pbxproj
AnonCamApp/Sources/Camera/: CameraCapture.swift  FaceMeshMapper.swift  FaceTrackingResult.swift  VisionFaceTracker.swift
AnonCamApp/Sources/Metal/: FrameExporter.swift  MetalRenderer.swift  Shaders.metal
AnonCamApp/Sources/UI/: AppDelegate.swift  AppViewModel.swift  ViewController.swift  main.swift
AnonCamApp/Supporting Files/: AnonCamApp.entitlements  Info.plist
AnonCamCameraExtension/Sources/: ExtensionDevice.swift  ExtensionProvider.swift  ExtensionStream.swift
AnonCamCameraExtension/Supporting Files/: AnonCamCameraExtension.entitlements  Info.plist
MediapipeWrapper/include/: FaceTracker.h
MediapipeWrapper/src/: FaceTracker.cpp  FaceTrackerBridge.mm
Shared/Headers/: FaceTrackerBridge.h
Shared/IPC/: FrameRingBuffer.swift
